--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -2,12 +2,12 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/**/*.js",
+      "src": "backend/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" }
+    { "src": "/api/(.*)", "dest": "/backend/index.js" }
   ]
 }
 
