--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -6,8 +6,5 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/backend/index.js" }
-  ]
+  "routes": [{ "src": "/api/(.*)", "dest": "/backend/index.js" }]
 }
-
